# grain2mesh-main

./: README.md  environment.yml  pyproject.toml
example/: RGB_config.json  binary_config.json  example.py
example/data/: RGB_example.npz  binary_example.npz
example/results/: baseCub.cub  baseSpline.cub  finalMesh.cub  finalMesh.inp
example/rgb_results/: baseSpline.cub  finalMesh.cub  finalMesh.inp
grain2mesh/: CubitSurface.py  FinalMesh.py  GrainLabeling.py  ImageProcessor.py  PetroSeg.py  PolygonMesh.py  SplinedSurface.py  __init__.py  main.py  utils.py
tests/: test_main.py
tests/data/: test_binary.npz
